

== Version 1.2 == *IN PROGRESS*

* New matchers:
  - "hasCount" matches collections for which -count satisfies a given matcher.
  - "hasCountOf" matches collections for which -count equals a given count.
  - "empty" matches empty collection.

* Fixed assertThat to describe the diagnosis of the mismatch, not just the mismatched value. OCHamcrest will now give even more useful information.

* Since nil cannot be directly stored in collections, collection matchers now guard against nil.

* Expanded BaseDescription's -appendDescriptionOf: to handle all types of values, not just self-describing values.

* Deprecated:
  - Description's -appendValue: no longer needed; call -appendDescriptionOf: instead.
  - Renamed HCInvocation's helper class method +createInvocationForSelector:onClass: to +invocationForSelector:onClass:
  - New helper function HCRequireNonNilObject should be used in place of HCRequireNonNilString.


== Version 1.1 ==

* New matchers:
  - "contains" matches collection containing matching items in order.
  - "containsInAnyOrder" matches collection containing matching items in any order.

* Fixed crash that occurred when trying to describe the matchers allOf, anyOf and isIn on iOS. Related to -ObjC linker flag.

* Changed documentation from HTML to Xcode documentation set. Run "make install" from the Documentation folder to install.

* Rearranged documentation modules to make things easier to find.

* Changed convenience methods to invoke superclass and return id, to support possibility of subclassing matchers.

1.1.2:
- Added the new matchers to the master header and to the iOS target.
- Fixed distribution zip file to preserve symlinks in frameworks.


== Version 1.0 ==

26 Oct 2010: First official release, including:
* Documentation
* Examples for
  - Cocoa
  - iOS
  - Creating a custom matcher

07 Oct 2010: