@@ -20,7 +20,16 @@
 {
     NSInvocation* invocation;
     id<HCMatcher> subMatcher;
+    BOOL shortMismatchDescription;
 }
+
+/**
+    Determines whether a mismatch will be described in short form.
+ 
+    Default is long form, which describes the object, the name of the invocation, and the
+    sub-matcher's mismatch diagnosis. Short form only has the sub-matcher's mismatch diagnosis.
+ */
+@property (nonatomic, assign) BOOL shortMismatchDescription;
 
 /**
     Helper method for creating an invocation.
@@ -36,7 +45,15 @@
  */
 + (NSInvocation*) createInvocationForSelector:(SEL)selector onClass:(Class)aClass  __attribute__((deprecated));
 
+/**
+    Returns an HCInvocationMatcher object initialized with an invocation and a matcher.
+ */
 - (id) initWithInvocation:(NSInvocation*)anInvocation matching:(id<HCMatcher>)aMatcher;
+
+/**
+    Invokes stored invocation on given item and returns the result.
+ */
+- (id) invokeOn:(id)item;
 
 /**
     Returns string representation of the invocation's selector.
